fix: considered scrollbar width and added 10px to the globe positioning

--- a/app/globals.css
+++ b/app/globals.css
@@ -295,7 +295,7 @@ tbody tr:last-child td {
   .globe {
     width: 120px;
     height: 120px;
-    left: 250.5px;
+    left: 260.5px;
     top: 130px;
   }
 }
@@ -303,7 +303,7 @@ tbody tr:last-child td {
   .globe {
     width: 120px;
     height: 120px;
-    left: 250.5px;
+    left: 260.5px;
     top: 130px;
   }
 }
@@ -311,7 +311,7 @@ tbody tr:last-child td {
   .globe {
     width: 80px;
     height: 80px;
-    left: 160.5px;
+    left: 170.5px;
     top: 90px;
   }
 }
@@ -319,7 +319,7 @@ tbody tr:last-child td {
   .globe {
     width: 70px;
     height: 70px;
-    left: 140.5px;
+    left: 150.5px;
     top: 70px;
   }
 }
@@ -327,7 +327,7 @@ tbody tr:last-child td {
   .globe {
     width: 70px;
     height: 70px;
-    left: 130.5px;
+    left: 140.5px;
     top: 70px;
   }
 }
@@ -336,7 +336,7 @@ tbody tr:last-child td {
   .globe {
     width: 70px;
     height: 70px;
-    left: 120px;
+    left: 130px;
     top: 60px;
   }
 }
@@ -345,7 +345,7 @@ tbody tr:last-child td {
   .globe {
     width: 65px !important;
     height: 65px !important;
-    left: 112.5px !important;
+    left: 122.5px !important;
     top: 58px !important;
   }
 }
@@ -354,7 +354,7 @@ tbody tr:last-child td {
   .globe {
     width: 65px !important;
     height: 65px !important;
-    left: 105px !important;
+    left: 115px !important;
     top: 52px !important;
   }
 }
@@ -363,7 +363,7 @@ tbody tr:last-child td {
   .globe {
     width: 60px !important;
     height: 60px !important;
-    left: 102.5px !important;
+    left: 110.5px !important;
     top: 55px !important;
   }
 }
@@ -371,7 +371,7 @@ tbody tr:last-child td {
   .globe {
     width: 60px !important;
     height: 60px !important;
-    left: 97px !important;
+    left: 107px !important;
     top: 47px !important;
   }
 }
@@ -380,7 +380,7 @@ tbody tr:last-child td {
   .globe {
     width: 50px !important;
     height: 50px !important;
-    left: 100px !important;
+    left: 110px !important;
     top: 45px !important;
   }
 }
@@ -389,7 +389,7 @@ tbody tr:last-child td {
   .globe {
     width: 50px !important;
     height: 50px !important;
-    left: 90px !important;
+    left: 100px !important;
     top: 45px !important;
   }
 }
